<resources>
    <string name="app_name">Login App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign Up</string>
    <string name="email_or_username">Email or Username</string>
    <string name="hint_email">example@example.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_with">Login With</string>
    <string name="email_">Email</string>
    <string name="user_name">User Name</string>

    <string name="facebook_app_id">361214611187439</string>
    <string name="fb_login_protocol_scheme">fb361214611187439</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="age">Age</string>
    <string name="mobile_number">Mobile number</string>
    <string name="save">Save</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="add_your_emile_to_reset_n_your_password">Add Your Emile to Reset  \nYour Password</string>
    <string name="send">Send</string>
    <string name="add_your_new_password_and_confirm_it">Add Your New Password \nand Confirm it</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="categories">Categories</string>
    <string name="car_wash">Car Wash</string>
    <string name="house_cleaning">House Cleaning</string>
    <string name="laundry">Laundry</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="order">Order</string>
    <string name="vouchres">Vouchres</string>
    <string name="points">Points</string>
    <string name="contact_us">Contact Us</string>
    <string name="change_language">Change Language</string>
    <string name="edit">Edit</string>
    <string name="offers">Offers</string>
    <string name="share">Share</string>
    <string name="coupons">Coupons</string>
    <string name="settings">Settings</string>

</resources>
