<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ForgotPasswordFirstStepFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/forget_pas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="90dp"
        android:text="@string/forgot_password_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/add_your_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/add_your_emile_to_reset_n_your_password"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="@dimen/dimension0"
        android:layout_height="@dimen/dimension70"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/dimension16"
        app:cardElevation="@dimen/dimension12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Text_Email_ForgotP_S1"
                style="@style/email_or_u"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/dimension16"
                android:text="@string/email_"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ForgotP_S1EditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/dimens_9"
                android:layout_marginEnd="@dimen/dimension24"
                android:background="@drawable/et_background"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="#ff212121"
                android:textSize="@dimen/text16"
                android:freezesText="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Text_Email_ForgotP_S1" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/ForgotP_S1Button"
        style="@style/sign_in_ptn"
        android:layout_width="@dimen/dimens_215"
        android:layout_height="@dimen/dimens_48"
        android:layout_marginTop="140dp"
        android:background="@drawable/sigein_btn"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />



</android.support.constraint.ConstraintLayout>