<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/login_background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimension80"
                android:layout_marginStart="@dimen/dimens_34"
                android:layout_marginTop="@dimen/dimens_92"
                android:layout_marginEnd="@dimen/dimens_34"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="@dimen/dimension16"
                app:cardElevation="@dimen/dimension12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/LoginBtn_SignIn"
                    style="@style/sign_in"
                    android:layout_width="@dimen/dimens_124"
                    android:layout_height="@dimen/dimens_40"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/dimension24"
                    android:layout_marginTop="@dimen/dimens_20"
                    android:layout_marginBottom="@dimen/dimens_20"
                    android:background="@drawable/btn_blue"
                    android:text="@string/sign_in" />

                <TextView
                    android:id="@+id/LoginBtn_SignUp"
                    style="@style/sign_up"
                    android:layout_width="@dimen/dimens_124"
                    android:layout_height="@dimen/dimens_40"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dimens_20"
                    android:layout_marginEnd="@dimen/dimension24"
                    android:layout_marginBottom="@dimen/dimens_20"
                    android:gravity="center"
                    android:text="@string/sign_up" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="@dimen/dimension0"
                android:layout_height="@dimen/dimens_140"
                android:layout_marginTop="@dimen/dimens_34"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="@dimen/dimension16"
                app:cardElevation="@dimen/dimension12"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/Text_Email_Login"
                        style="@style/email_or_u"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="@dimen/dimension16"
                        android:text="@string/email_or_username"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/LoginEditTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="@dimen/dimens_9"
                        android:layout_marginEnd="@dimen/dimension24"
                        android:background="@drawable/et_background"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColor="#ff212121"
                        android:textSize="@dimen/text16"
                        android:freezesText="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Text_Email_Login" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimension1"
                        android:layout_gravity="center"
                        android:background="#fff1f1f1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/Text_Password_Login"
                        style="@style/email_or_u"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="@dimen/dimension16"
                        android:text="@string/password"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view" />

                    <EditText
                        android:id="@+id/EditTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimension24"
                        android:layout_marginTop="@dimen/dimens_9"
                        android:layout_marginEnd="@dimen/dimension24"
                        android:background="@drawable/et_background"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#ff212121"
                        android:textSize="@dimen/text16"
                        android:freezesText="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Text_Password_Login" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/LoginTextViewForgotPassword"
                style="@style/forgot_pas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_34"
                android:text="@string/forgot_password"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:layout_constraintStart_toStartOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <Button
                android:id="@+id/LoginButton"
                style="@style/sign_in_ptn"
                android:layout_width="@dimen/dimens_215"
                android:layout_height="@dimen/dimens_48"
                android:layout_marginTop="59dp"
                android:background="@drawable/sigein_btn"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LoginTextViewForgotPassword" />

            <TextView
                style="@style/log_in_wit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="118dp"
                android:text="@string/login_with"
                app:layout_constraintEnd_toEndOf="@+id/LoginButton"
                app:layout_constraintStart_toStartOf="@+id/LoginButton"
                app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>